--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular2-materialize": "^15.1.10",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "materialize-css": "^0.100.2",
+    "ngx-bootstrap": "^2.0.3",
+    "ngx-slick": "^0.1.3",
     "rxjs": "^5.5.6",
+    "slick-carousel": "^1.8.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
