--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "angular2-materialize": "^15.1.10",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "firebase-admin": "^6.1.0",
+    "firebase-functions": "^2.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "materialize-css": "^0.100.2",
